syntax = "proto3";

package nodepb;

option go_package = "proto/nodepb";

service Node {
  rpc RequestVote (VoteRequest) returns (VoteResponse);
  rpc AppendEntries (AppendRequest) returns (AppendResponse);
  rpc ForwardToLeader (Command) returns (CommandResponse);
}

message VoteRequest {
  int64 term = 1;
  int64 candidate_id = 2;
  int64 last_log_index = 3;
  int64 last_log_term = 4;
}

message VoteResponse {
  int64 term = 1;
  bool vote_granted = 2;
}

message AppendRequest {
  int64 term = 1;
  int64 leader_id = 2;
  int64 prev_log_index = 3;
  int64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int64 leader_commit = 6;
}

message AppendResponse {
  int64 term = 1;
  bool success = 2;
}

message LogEntry {
  int64 term = 1;
  bytes command = 2;
}

message Command {
  bytes command = 1;
}

message CommandResponse {
  bool success = 1;
  bytes result = 2;
}